# news

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  app.Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  worker.Dockerfile
src/app/crawler/: dto.py  exception.py  fake_scrapper.py  mixins.py  model.py  repo.py  rest_api.py  scrapping.py  service.py
src/app/scheduler/: dto.py  model.py  repo.py  service.py
src/app/user/: bot_api.py  exception.py  model.py  repo.py  service.py
src/app/worker/: dto.py  events.py  rmq_api.py  rmq_spi.py
src/core/: di.py
src/core/conf/: settings.py
src/core/conf/envs/: .env.example
src/core/db/: pg_base_model.py  pg_base_repo.py  pg_connection.py  pg_mixin.py  pg_uow.py
src/core/migrations/: env.py
src/core/migrations/versions/: 0529342cc859_.py  0e8b355adb04_.py  6b1d2bc0d2ad_.py
src/core/rmq/: rmq_publisher.py
src/core/utils/: base_dtos.py  base_value_objects.py  repeat_at.py  types.py
src/core/utils/api/: cbv.py  custom_requests.py  http_exceptions.py  jwt_exceptions.py  logger.py  middlewares.py  response.py  security.py
