[project]
name = "carumi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "dependency-injector>=4.44.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "circuitbreaker>=2.0.0",
    "httpx>=0.28.1",
    "retry-async>=0.1.4",
    "pyjwt>=2.10.1",
]
